--- a/package.json
+++ b/package.json
@@ -35,12 +35,13 @@
   "license": "MIT",
   "dependencies": {
     "@babel/runtime": "^7.7.7",
+    "@tarojs/components": "3.0.27",
+    "@tarojs/plugin-platform-weapp": "^3.1.1",
     "@tarojs/runtime": "3.0.27",
     "@tarojs/taro": "3.0.27",
-    "@tarojs/components": "3.0.27",
-    "vuex": "^3.0.0",
+    "vue": "^2.5.0",
     "vue-template-compiler": "^2.5.0",
-    "vue": "^2.5.0"
+    "vuex": "^3.0.0"
   },
   "devDependencies": {
     "@types/webpack-env": "^1.13.6",
