--- a/package.json
+++ b/package.json
@@ -35,26 +35,29 @@
   "license": "MIT",
   "dependencies": {
     "@babel/runtime": "^7.7.7",
+    "@tarojs/cli": "^3.1.2",
+    "@tarojs/components": "3.0.27",
+    "@tarojs/plugin-platform-alipay": "^3.1.2",
+    "@tarojs/plugin-platform-weapp": "^3.1.2",
     "@tarojs/runtime": "3.0.27",
     "@tarojs/taro": "3.0.27",
-    "@tarojs/components": "3.0.27",
-    "vuex": "^3.0.0",
+    "vue": "^2.5.0",
     "vue-template-compiler": "^2.5.0",
-    "vue": "^2.5.0"
+    "vuex": "^3.0.0"
   },
   "devDependencies": {
-    "@types/webpack-env": "^1.13.6",
+    "@babel/core": "^7.8.0",
     "@tarojs/mini-runner": "3.0.27",
     "@tarojs/webpack-runner": "3.0.27",
-    "@babel/core": "^7.8.0",
-    "babel-preset-taro": "3.0.27",
-    "vue-loader": "^15.9.2",
-    "eslint-plugin-vue": "^6.x",
-    "eslint-config-taro": "3.0.27",
-    "eslint": "^6.8.0",
-    "stylelint": "9.3.0",
-    "@typescript-eslint/parser": "^2.x",
+    "@types/webpack-env": "^1.13.6",
     "@typescript-eslint/eslint-plugin": "^2.x",
-    "typescript": "^3.7.0"
+    "@typescript-eslint/parser": "^2.x",
+    "babel-preset-taro": "3.0.27",
+    "eslint": "^6.8.0",
+    "eslint-config-taro": "3.0.27",
+    "eslint-plugin-vue": "^6.x",
+    "stylelint": "9.3.0",
+    "typescript": "^3.7.0",
+    "vue-loader": "^15.9.2"
   }
 }
