--- a/project.private.config.json
+++ b/project.private.config.json
@@ -21,6 +21,13 @@
         {
           "name": "pages/index/index",
           "pathName": "pages/index/index",
+          "query": "",
+          "scene": null
+        },
+        {
+          "name": "pages/mycourse/index",
+          "pathName": "pages/mycourse/index",
+          "query": "",
           "scene": null
         }
       ]
