--- a/project.config.json
+++ b/project.config.json
@@ -6,7 +6,7 @@
   "setting": {
     "urlCheck": false,
     "es6": false,
-    "enhance": false,
+    "enhance": true,
     "postcss": false,
     "preloadBackgroundData": false,
     "minified": false,
